--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+    <head>AirBnB Clone</head>
     <body style="margin: 0; padding: 0;">
         <header style="background-color: #ff0000; height: 70px; width: 100%;"></header>
-        <footer style="background-color: #00ff00; height: 60px; width: 100%; position: fixed; bottom: 0;">
+        <footer style="background-color: #00ff00; height: 60px; width: 100%; position: absolute; bottom: 0; text-align: center; line-height: 60px;">
+            Best School
         </footer>
     </body>
 </html>
