--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        AirBnB Clone
+        <title>AirBnB Clone</title>
     </head>
     <body style="margin: 0; padding: 0;">
         <header style="background-color: #ff0000; height: 70px; width: 100%;">
