trailer space fixed

--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -194,6 +194,4 @@
         Best School
     </footer>
 </body>
-</html>                                                                                                                           203,1         Bot
-    
-            
+</html>                                                                                                     203,1         BotZZ          
